# TRANSVID.EXE

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: build-windows.yml
scripts/: build_windows.py
video_drop_converter/: __init__.py  core.py  gui.py  worker.py
