[project]
name = "video-drop-converter"
version = "0.1.0"
description = "Drag-and-drop HEVC video converter with automatic hardware encoder detection."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
video-drop-converter = "video_drop_converter.gui:run"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"
